# wittenberg-data-structures-and-algorithms-in-cpp

./: CMakeLists.txt  README.md
include/: list.h  vector.h
test/: test_list.cpp  test_vector.cpp
